modified ( fiche.css index.html page.html)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<!-- Steps -->
 	<div class="steps landing__section">
 		<div class="container">
-			<h2>Who can use this page ?</h2>
+			<h2>Scolarité moderne à l'UNSTIM</h2>
 			<p>Student of UNSTIM</p>
 		</div>
 		<div class="container">
@@ -65,22 +65,22 @@
 					<div class="step__media">
 						<img src="./images/undraw_designer.svg" class="step__image">
 					</div>
-					<h4>Programmers</h4>
-					<p class="step__text">A landing page for your open source projects. Present your solution, easily create docs.</p>
+					<h4>GESTION DES ETUDIANTS</h4>
+					<p class="step__text"> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.   </p>
 				</div>
 				<div class="step">
 					<div class="step__media">
 						<img src="./images/undraw_responsive.svg" class="step__image">
 					</div>
-					<h4>Designers</h4>
-					<p class="step__text">A website for your own freebies. Let the world download and use your artwork.</p>
+					<h4>GESTION DES RESOURCES DE L'ETUDIANT</h4>
+					<p class="step__text"> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.    </p>
 				</div>
 				<div class="step">
 					<div class="step__media">
 						<img src="./images/undraw_creation.svg" class="step__image">
 					</div>
-					<h4>Makers</h4>
-					<p class="step__text">A great starting point for your web application. Focus on your idea and execution.</p>
+					<h4>GESTION DE LA SCOLARITE</h4>
+					<p class="step__text"> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.     </p>
 				</div>
 			</div>
 		</div>
