--- a/page.html
+++ b/page.html
@@ -10,7 +10,6 @@
 <body>
 	<!-- navbar -->
 	<div class="navbar navbar--extended">
-		<nav class="nav__mobile"></nav>
 		<div class="container">
 			<div class="navbar__inner">
 				<a href="index.html" class="navbar__logo">Scolarite.unstim.bj</a>
@@ -42,20 +41,20 @@
 	<!-- Page content -->
 	<div class="container center"> 
 		<form class="text-center" >
-			<div class="double">
-				<div class="half">
-					<input type='text' placeholder="Entrer le matricule de la fiche">
+			<div class="container center">
+				<div class="">
+					<input type='text' placeholder="Entrer le matricule de la fiche" class="container" id="mat">
 				</div>
-				<div class="half">
-					<a href="fiche.html" class="button button__accent">Voir</a>
+				<div class="">
+					<a href="page.html" class="button button__accent container">Voir</a>
 				</div>								
 			</div>
 		</form>
 		
 	
 	</div>
-	<div class="container">
-		<div class="fiche">
+	<div class="container center">
+		<div class="fiche container">
 			<div class="container " id="entete_fiche">
 				<img src="images/logo_unstim.png" alt="logo ministere de l'enseignement superieur" width="70" height="70" id="image" class="" />
 				
