modified all file html

--- a/carte.html
+++ b/carte.html
@@ -2,6 +2,7 @@
 <html lang='fr'>
 <head>
 	<meta class="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Ma carte d'étudiant</title>
 	<link rel='stylesheet' href='css/style.min.css' />
@@ -107,7 +108,18 @@
 		</div>
 	
 	</div>
-	
+	<div class="container center"> 
+		<form class="text-center" >
+			<div class="container center">
+				<div class="">
+					<input type='text' placeholder="Entrer le matricule de la fiche" class="container" id="mat">
+				</div>
+				<div class="">
+					<a href="page.html" class="button button__accent container">Voir ma fiche de préinscription</a>
+				</div>								
+			</div>
+		</form>
+	</div>
 		
 	
 	<!-- Footer -->
