--- a/page.html
+++ b/page.html
@@ -2,6 +2,7 @@
 <html lang='fr'>
 <head>
 	<meta class="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Fiches Scolarite.unstim.bj</title>
 	<link rel='stylesheet' href='css/style.min.css' />
@@ -39,20 +40,7 @@
 		</div>
 	</div>
 	<!-- Page content -->
-	<div class="container center"> 
-		<form class="text-center" >
-			<div class="container center">
-				<div class="">
-					<input type='text' placeholder="Entrer le matricule de la fiche" class="container" id="mat">
-				</div>
-				<div class="">
-					<a href="page.html" class="button button__accent container">Voir</a>
-				</div>								
-			</div>
-		</form>
-		
 	
-	</div>
 	<div class="container center">
 		<div class="fiche container">
 			<div class="container " id="entete_fiche">
