--- a/Error_page.html
+++ b/Error_page.html
@@ -2,6 +2,7 @@
 <html lang='fr'>
 <head>
 	<meta class="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Erreur</title>
 	<link rel='stylesheet' href='css/style.min.css' />
