--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='fr'>
 <head>
 	<meta class="utf-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Scolarite.unstim.bj</title>
 	<!-- Don't forget to add your metadata here -->
